--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Radar</title>
 
+    <link rel="icon" href="{{ url_for('static', filename='assets/RR_Icon.avif') }}">
+
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 
